<resources>
    <string name="app_name">松小堡</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="i_see">我知道了</string>
    <string name="ignore">忽略</string>
    <string name="proceed">继续</string>
    <string name="being_not">暂不</string>
    <string name="reset">重置</string>
    <string name="retry">重试</string>
    <string name="back">返回</string>
    <string name="copy">复制</string>
    <string name="save">保存</string>
    <string name="save_ok">保存成功</string>
    <string name="my_new">新建</string>
    <string name="add">添加</string>
    <string name="add_photo">添加照片</string>
    <string name="all">全部</string>
    <string name="see_all">查看全部</string>
    <string name="select">选择</string>
    <string name="select_all">全选</string>
    <string name="total">合计：</string>
    <string name="item_price">价格：</string>
    <string name="item_number">数量：</string>
    <string name="item_select_no">选择：</string>
    <string name="item_select_ok">已选：</string>
    <string name="selected">已选</string>
    <string name="recommend">推荐</string>
    <string name="active">生效中</string>
    <string name="expired">已过期</string>
    <string name="cancelled">已核销</string>
    <string name="login">登录</string>
    <string name="size">尺寸</string>
    <string name="color">颜色</string>
    <string name="price">价格</string>
    <string name="number">数量</string>
    <string name="others">其它</string>
    <string name="clean">清除</string>
    <string name="done">完成</string>
    <string name="desc">""</string>
    <string name="dot">・</string>
    <string name="space">―</string>
    <string name="sign_semicolon">：</string>
    <string name="time_divided">:</string>
    <string name="multiplication">×</string>
    <string name="explain">说明：</string>
    <string name="other">其他：</string>
    <string name="suit">适用：</string>
    <string name="time">时间：</string>
    <string name="place">地点：</string>
    <string name="number_p">人数：</string>
    <string name="number_0">0</string>
    <string name="price_00">0.00</string>
    <string name="num_total">共%1$d件</string>
    <string name="prompt">操作提示</string>
    <string name="delete">删除</string>
    <string name="delete_pain">忍痛删了</string>
    <string name="delete_think">我再想想</string>
    <string name="leave_confirm">去意已决</string>
    <string name="send_confirm">确认发送</string>
    <string name="scan">扫一扫</string>
    <string name="next">下一步</string>
    <string name="skip">跳过</string>
    <string name="send">发送</string>
    <string name="submit">提交</string>
    <string name="submit_success">提交成功</string>
    <string name="must_fill">必填</string>
    <string name="not_empty">不能为空</string>
    <string name="data_null">- 暂无内容 -</string>
    <string name="setting">设置</string>
    <string name="error">错误</string>
    <string name="post">发布</string>
    <string name="title">标题</string>
    <string name="undo">复原</string>
    <string name="redo">重做</string>
    <string name="edit">编辑</string>
    <string name="unfold">展开</string>
    <string name="put_away">收起</string>
    <string name="rmb">￥</string>
    <string name="day">d</string>
    <string name="hour">h</string>
    <string name="minute">m</string>
    <string name="second">s</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="qr_code_scan">二维码扫描</string>
    <string name="toast_no_open">暂未开放&#8230; 敬请期待&#8230;</string>
    <string name="toast_server_busy">服务器繁忙</string>
    <string name="toast_exit_prompt">再按一次退出程序</string>
    <string name="toast_error_data_app">应用数据出错\tT_T\n请重启此应用\tT_T</string>
    <string name="toast_error_data_page">数据出现错误\tT_T\n正在加载数据\tT_T</string>
    <string name="toast_object_null">因手机系统版本过低\tT_T\n此功能无法正常使用\tT_T</string>
    <string name="dialog_version_new">当前版本已是最新版本</string>
    <string name="dialog_version_update">检测到新版本\n确定开始更新</string>
    <string name="dialog_version_update_force">当前版本低于最低版本！\n需升级后才能正常使用！</string>
    <string name="dialog_error_msg">出错啦！请稍后再试！</string>
    <string name="dialog_error_video_url">视频出错！无法播放！</string>
    <string name="network">网络</string>
    <string name="network_closed">未能连接到%1$s</string>
    <string name="network_fault">请检查您的网络连接</string>
    <string name="network_no_wifi">检测到您当前未使用Wifi，建议您在Wifi网络下观看视频</string>
    <string name="loading">请稍候&#8230;</string>
    <string name="loading_pull_refresh">下拉刷新</string>
    <string name="loading_release_refresh">松开刷新</string>
    <string name="loading_loading">加载中&#8230;</string>
    <string name="loading_update_time">上次更新时间 </string>
    <string name="loading_load_more">加载更多</string>
    <string name="loading_strive_loading">奋力加载中&#8230;</string>
    <string name="loading_downloading">奋力下载中&#8230;&#8230;</string>
    <string name="loading_no_more">没有更多了</string>
    <string name="loading_no_data">暂无%1$s</string>
    <string name="loading_process">正在%1$s</string>
    <string name="loading_click_load">重新加载</string>
    <string name="loading_submit_fail">上传失败</string>
    <string name="main_tab_text_1">首页</string>
    <string name="main_tab_text_2">商城</string>
    <string name="main_tab_text_3">我的</string>
    <string name="main_head_tickets">门票购买</string>
    <string name="main_head_reserve">课程预订</string>
    <string name="main_head_title_cn">最新活动</string>
    <string name="main_head_title_en">LATEST ACTIVITY</string>
    <string name="mine_login">点击头像登录</string>
    <string name="mine_my_design">我的设计</string>
    <string name="mine_my_tickets">我的门票</string>
    <string name="mine_my_sing_up">我的活动</string>
    <string name="mine_my_reserve">我的预约</string>
    <string name="mine_my_purchase">我的购买</string>
    <string name="mine_my_customize">我的定制</string>
    <string name="mine_call">联系客服</string>
    <string name="mine_setting">设置中心</string>
    <string name="mine_message">消息中心</string>
    <string name="mine_message_history">以下为历史消息</string>
    <string name="mine_sign_num">%1$d人已报名</string>
    <string name="mine_info">我的资料</string>
    <string name="mine_head">头像</string>
    <string name="mine_name">姓名</string>
    <string name="mine_nick">昵称</string>
    <string name="mine_gender">性别</string>
    <string name="mine_gender_male">男</string>
    <string name="mine_gender_female">女</string>
    <string name="mine_gender_confidential">保密</string>
    <string name="mine_birthday">生日</string>
    <string name="mine_area">地区</string>
    <string name="mine_my_address">地址管理</string>
    <string name="mine_change_nick">修改昵称</string>
    <string name="mine_input_nick">请输入昵称</string>
    <string name="mine_change_gender">修改性别</string>
    <string name="mine_change_area">选择地区</string>
    <string name="mine_change_intro">修改签名</string>
    <string name="mine_intro">签名</string>
    <string name="mine_intro_hint">填写个性签名更容易获得别人的关注哦</string>
    <string name="reserve_now">立即预约</string>
    <string name="reserve_slot">预约时段：</string>
    <string name="reserve_place">课程地点：</string>
    <string name="reserve_suit">适用人群：</string>
    <string name="reserve_date">预约日期</string>
    <string name="reserve_date_item">预约日期：%1$s</string>
    <string name="reserve_time">预约时间</string>
    <string name="reserve_time_item">预约时间：%1$s</string>
    <string name="reserve_desc">课程介绍</string>
    <string name="reserve_desc_en">COURSE DESCRIPTION</string>
    <string name="reserve_choice">选择场次</string>
    <string name="reserve_qr_code">预约券码</string>
    <string name="reserve_success">预约成功</string>
    <string name="reserve_success_can">预约成功（已核销）</string>
    <string name="reserve_success_end">预约成功（已过期）</string>
    <string name="reserve_success_show">恭喜您！预约成功</string>
    <string name="reserve_fail">预约失败\tT_T</string>
    <string name="reserve_error">预约结果未知~</string>
    <string name="choice_date">选择场次</string>
    <string name="choice_select_date">请选择日期</string>
    <string name="choice_select_time">请选择场次</string>
    <string name="choice_select_time_empty">此日期无可选场次</string>
    <string name="choice_select_option">可选场次</string>
    <string name="choice_select_option_en">OPTIONAL EVENTS</string>
    <string name="choice_reserve_yes">已预约</string>
    <string name="choice_reserve_ok">可预约</string>
    <string name="choice_reserve_no">已预满</string>
    <string name="sign_up_title">我要报名</string>
    <string name="sign_up_now">立即报名</string>
    <string name="sign_up_already">您已报名</string>
    <string name="sign_up_end">报名已截止</string>
    <string name="sign_up_input_info">填写资料</string>
    <string name="sign_up_input_info_en">FILL IN INFORMATION</string>
    <string name="sign_up_explain">活动说明</string>
    <string name="sign_up_explain_en">ACTIVITY DESCRIPTION</string>
    <string name="sign_up_name">姓名：</string>
    <string name="sign_up_input_name">请输入姓名</string>
    <string name="sign_up_gender">性别：</string>
    <string name="sign_up_age">年龄：</string>
    <string name="sign_up_input_age">请选择年龄范围</string>
    <string name="sign_up_phone">手机：</string>
    <string name="sign_up_input_phone">请输入手机号码</string>
    <string name="sign_up_input_phone_error">请输入正确的11位数手机号码</string>
    <string name="sign_up_time">活动时间：</string>
    <string name="sign_up_address">活动地点：</string>
    <string name="sign_up_people">报名情况：</string>
    <string name="sign_up_info">活动信息</string>
    <string name="sign_up_info_time">%1$s 至 %2$s</string>
    <string name="sign_up_info_number">"已报名%1$d人/限%2$d人报名"</string>
    <string name="sign_up_cost_hint">费用为大赛统一报名费，主要用于场地租赁和组织等;</string>
    <string name="sign_up_fail">报名失败\tT_T</string>
    <string name="sign_up_success">报名成功</string>
    <string name="sign_up_success_end">报名成功（已过期）</string>
    <string name="sign_up_success_show">恭喜您！报名成功</string>
    <string name="coupon_member_meal">会员套餐</string>
    <string name="coupon_member_meal_en">MEMBERS PACKAGE</string>
    <string name="coupon_discount">立省%1$s元</string>
    <string name="coupon_buy_now">立即购买</string>
    <string name="coupon_expired_time">过期日：%1$s</string>
    <string name="comment_me">我要评价</string>
    <string name="comment_add">追加评价</string>
    <string name="comment_add_hint">追加一下你的使用体验吧~</string>
    <string name="comment_add_day">"购买%1$d天后追加评论"</string>
    <string name="comment_all">全部</string>
    <string name="comment_new">最新</string>
    <string name="comment_img">有图</string>
    <string name="comment_star">整体评价</string>
    <string name="comment_ok">评论已发布</string>
    <string name="comment_content_null">评价内容不能为空</string>
    <string name="comment_content_hint">说说它的优点和美中不足的地方吧~</string>
    <string name="goods_search_et_hint">输入商品关键字</string>
    <string name="goods_new_line">新品上线</string>
    <string name="goods_new_line_en">NEW PRODUCT LAUNCH</string>
    <string name="goods_hot_single">热门单品</string>
    <string name="goods_hot_single_en">THE LOG SERIES</string>
    <string name="goods_top_item_1">综合</string>
    <string name="goods_top_item_2">销量</string>
    <string name="goods_top_item_3">价格</string>
    <string name="goods_top_item_4">信用</string>
    <string name="setting_about_us">关于我们</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_version">检查更新</string>
    <string name="setting_push">消息推送</string>
    <string name="setting_logout">退出帐户</string>
    <string name="login_phone_input">请输入手机号</string>
    <string name="login_phone_input_error">请输入正确的手机号码</string>
    <string name="login_verify_code">短信验证码</string>
    <string name="login_verify_code_gain">获取验证码</string>
    <string name="login_password_new">新密码（6-20位字母+数字）</string>
    <string name="login_password_error">密码必须为6-20位英文字母+数字</string>
    <string name="login_reset_login">修改并登录</string>
    <string name="share">分享</string>
    <string name="share_qq">QQ</string>
    <string name="share_qq_space">QQ空间</string>
    <string name="share_friends">朋友圈</string>
    <string name="share_wx">微信</string>
    <string name="share_wb">微博</string>
    <string name="share_email">邮件</string>
    <string name="share_message">短信</string>
    <string name="share_copy">复制链接</string>
</resources>