<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/ui_bg_color_nut">

    <EditText
        android:id="@+id/reset_password_et_phone"
        style="@style/Register_EditText"
        android:maxLength="13"
        android:hint="@string/login_phone_input"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintWidth_percent="0.8"/>

    <ImageView
        android:id="@+id/reset_password_iv_phone_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc"
        android:src="@mipmap/icon_clear"
        android:layout_marginTop="@dimen/margin_padding_12"
        app:layout_constraintTop_toTopOf="@id/reset_password_et_phone"
        app:layout_constraintRight_toRightOf="@id/reset_password_et_phone"
        android:visibility="gone" />

    <ImageView
        style="@style/set_line_horizontal_bg"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/margin_padding_5"
        android:contentDescription="@string/desc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reset_password_et_phone"
        app:layout_constraintWidth_percent="0.8"/>

    <TextView
        android:id="@+id/reset_password_tv_phone_error"
        style="@style/Register_TextView"
        android:layout_marginTop="@dimen/margin_padding_10"
        android:text="@string/login_phone_input_error"
        android:textSize="@dimen/app_text_size_small"
        android:textColor="@color/app_color_r_red"
        app:layout_constraintTop_toBottomOf="@id/reset_password_et_phone"
        app:layout_constraintLeft_toLeftOf="@id/reset_password_et_phone"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/reset_password_et_password"
        style="@style/Register_EditText"
        android:maxLength="20"
        android:imeOptions="actionNext"
        android:hint="@string/login_password_new"
        android:digits="@null"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/reset_password_et_phone"
        app:layout_constraintLeft_toLeftOf="@id/reset_password_et_phone"
        app:layout_constraintWidth_percent="0.8"/>

    <ImageView
        android:id="@+id/reset_password_iv_password_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc"
        android:layout_marginTop="@dimen/margin_padding_42"
        android:src="@drawable/selector_icon_password"
        app:layout_constraintTop_toBottomOf="@id/reset_password_et_phone"
        app:layout_constraintRight_toRightOf="@id/reset_password_et_phone"/>

    <ImageView
        style="@style/set_line_horizontal_bg"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/margin_padding_5"
        android:contentDescription="@string/desc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reset_password_et_password"
        app:layout_constraintWidth_percent="0.8"/>

    <TextView
        android:id="@+id/reset_password_tv_password_error"
        style="@style/Register_TextView"
        android:layout_marginTop="@dimen/margin_padding_10"
        android:text="@string/login_password_error"
        android:textSize="@dimen/app_text_size_small"
        android:textColor="@color/app_color_r_red"
        app:layout_constraintTop_toBottomOf="@id/reset_password_et_password"
        app:layout_constraintLeft_toLeftOf="@id/reset_password_et_password"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/reset_password_et_code"
        style="@style/Register_EditText"
        android:maxLength="6"
        android:imeOptions="actionDone"
        android:hint="@string/login_verify_code"
        app:layout_constraintTop_toBottomOf="@id/reset_password_et_password"
        app:layout_constraintLeft_toLeftOf="@id/reset_password_et_password"
        app:layout_constraintWidth_percent="0.5"/>

    <TextView
        android:id="@+id/reset_password_tv_verify_code"
        android:layout_width="0dp"
        android:layout_height="@dimen/login_et_height_default"
        android:layout_marginTop="@dimen/margin_padding_30"
        android:gravity="center"
        android:text="@string/login_verify_code_gain"
        android:textColor="@color/app_color_white"
        android:textSize="@dimen/app_text_size_content"
        android:background="@drawable/shape_button_style_3_20"
        app:layout_constraintTop_toBottomOf="@id/reset_password_et_password"
        app:layout_constraintRight_toRightOf="@id/reset_password_et_password"
        app:layout_constraintWidth_percent="0.3"/>

    <ImageView
        style="@style/set_line_horizontal_bg"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/margin_padding_5"
        android:contentDescription="@string/desc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reset_password_et_code"
        app:layout_constraintWidth_percent="0.8"/>

    <Button
        android:id="@+id/reset_password_btn_reset"
        style="@style/Register_Button"
        android:text="@string/login_reset_login"
        android:background="@drawable/shape_button_style_3_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintWidth_percent="0.43"/>

</android.support.constraint.ConstraintLayout>