<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color_white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/setting_rl_logout"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/setting_rl_about_us"
                style="@style/setting_lay_item">

                <TextView
                    android:id="@+id/setting_tv_about_us_title"
                    style="@style/setting_lay_text_title"
                    android:text="@string/setting_about_us" />

                <TextView
                    android:id="@+id/setting_tv_about_us_content"
                    style="@style/setting_lay_text_content" />

                <ImageView
                    style="@style/set_line_horizontal_bg"
                    android:layout_alignParentBottom="true"
                    android:contentDescription="@string/desc" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/setting_rl_feedback"
                style="@style/setting_lay_item">

                <TextView
                    android:id="@+id/setting_tv_feedback_title"
                    style="@style/setting_lay_text_title"
                    android:text="@string/setting_feedback" />

                <TextView
                    android:id="@+id/setting_tv_feedback_content"
                    style="@style/setting_lay_text_content" />

                <ImageView
                    style="@style/set_line_horizontal_bg"
                    android:layout_alignParentBottom="true"
                    android:contentDescription="@string/desc" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/setting_rl_push_control"
                style="@style/setting_lay_item"
                android:visibility="gone">

                <TextView
                    android:id="@+id/setting_tv_push_control_title"
                    style="@style/setting_lay_text_title"
                    android:text="@string/setting_push" />

                <ImageView
                    android:id="@+id/setting_iv_push_control_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/app_margin_screen"
                    android:clickable="true"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/selector_icon_push" />

                <ImageView
                    style="@style/set_line_horizontal_bg"
                    android:layout_alignParentBottom="true"
                    android:contentDescription="@string/desc" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/setting_rl_version"
                style="@style/setting_lay_item">

                <TextView
                    android:id="@+id/setting_tv_version_title"
                    style="@style/setting_lay_text_title"
                    android:text="@string/setting_version" />

                <TextView
                    android:id="@+id/setting_tv_version_content"
                    style="@style/setting_lay_text_content" />

                <ImageView
                    style="@style/set_line_horizontal_bg"
                    android:layout_alignParentBottom="true"
                    android:contentDescription="@string/desc" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/setting_rl_logout"
        style="@style/setting_lay_item"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/setting_tv_logout"
            style="@style/setting_lay_text_title"
            android:layout_centerInParent="true"
            android:text="@string/setting_logout" />

        <ImageView
            style="@style/set_line_horizontal_bg"
            android:contentDescription="@string/desc" />
    </RelativeLayout>

</RelativeLayout>